gitops/espresso/infrastructure/controllers/external-dns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    pod-security.kubernetes.io/enforce: restricted
