gitops/espresso/infrastructure/controllers/external-dns/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns
  namespace: external-dns
spec:
  endpointSelector: {}
  ingress:
    # Kubelet probes
    - fromEntities:
        - host
        - remote-node
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Kubernetes API for watching DNSEndpoint CRDs
    - toEntities:
        - kube-apiserver
    # Cloudflare API
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
